# nba_rebuild_project

./: .gitignore  README.md  _quarto.yml  app.py  pyproject.toml  requirements.txt  results.json  setup.py  streamlit_app.py
_site/: search.json
_site/docs/: documentation.html  report.html
_site/src/nba_rebuilds/: eda.html
data/: nba_roster_construction_2000_2024.csv  roster_construction.ipynb  standings_2010-11.csv  standings_2014-15.csv  standings_2018-19.csv  standings_2020-21.csv  standings_2021-22.csv  standings_2023-24.csv
docs/: _quarto.yml  about.html  documentation.html  documentation.qmd  index.html  index.qmd  report.html  report.qmd  search.json  tutorial.html  tutorial.qmd
docs/_site/: index.html  search.json
docs/_site/docs/: about.html  index.html  tutorial.html
nba_rebuilds/: All_NBA_Players_by_team.csv  combined_dataset.ipynb  combined_file.csv  nba_roster_construction_2010_2024.csv  roster_construction.ipynb  scraping.py
nba_rebuilds.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
nba_rebuilds/data/: all_nba_counts.csv  standings_2009-10.csv  standings_2011-12.csv  standings_2012-13.csv  standings_2013-14.csv  standings_2015-16.csv  standings_2016-17.csv  standings_2017-18.csv  standings_2019-20.csv  standings_2022-23.csv
pages/: 1_Rebuild_Analyzer.py  2_Playoff_Predictor.py
scripts/: rebuilds.py
src/nba_rebuilds/: __init__.py  eda.ipynb  fetch_data.py  predictor.py  scraping.py  train_model.py
src/nba_rebuilds/data/: combined_dataset.ipynb  final_combined_file.csv  nba_playoffs_binary_2010_2025.csv  (+1 more)
tests/: test_basic.py
(+6 files in other folders)
